# zenn-fastapi-ecs-apigw

./: Makefile  README.md  docker-compose.yml  fastapi.Dockerfile  pyproject.toml
backend/: gunicorn.config.py  main.py
infrastructure/: .editorconfig  .gitignore  package-lock.json  package.json
infrastructure/lib/: EcsApigwStack.ts  common.ts  index.ts  paramsExample.ts
